tests/ui/impl-trait/associated-type-undefine.stderr
error: unconstrained opaque type
  --> $DIR/associated-type-undefine.rs:18:16
   |
LL |     type Bar = impl Sized;
   |                ^^^^^^^^^^
   |
   = note: `Bar` must be used in combination with a concrete type within the same impl

error[E0308]: mismatched types
  --> $DIR/associated-type-undefine.rs:24:14
   |
LL |     type Bar = impl Sized;
   |                ---------- the expected opaque type
...
LL |         ((), ())
   |              ^^ expected opaque type, found `()`
   |
   = note: expected opaque type `<() as Foo>::Bar`
                found unit type `()`
note: this item must have a `#[defines(<() as Foo>::Bar)]` attribute to be able to define hidden types
  --> $DIR/associated-type-undefine.rs:23:8
   |
LL |     fn foo(self) -> (<Self as Foo>::Gat<u32>, <Self as Foo>::Gat<Self>) {
   |        ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
